# MOMO-Scholar

./: .env.example  .gitignore  AGENTS.md  PaperAgent.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: evaluation.md  fulltext-survey.md  hybrid-retrieval.md
docs/interview-preparation/: README.md  agent-basics.md  momo-scholar-interview-learning-roadmap.md  rag-glossary.md
paper_agent/: cli.py  config.py  io.py  pipeline.py  schemas.py
paper_agent/eval/: __init__.py  metrics.py  retrieval_runner.py  runner.py
paper_agent/evidence/: __init__.py  citation_checker.py  contracts.py  factory.py  fusion.py  hybrid.py  models.py  packs.py  retriever.py  vector_source.py
paper_agent/fulltext/: __init__.py  downloader.py  models.py  parser.py  service.py
paper_agent/generation/: __init__.py  contracts.py  dashscope.py  dashscope_transport.py
paper_agent/observability/: __init__.py  models.py  recorder.py  sanitize.py
paper_agent/rendering/: markdown.py
paper_agent/retrieval/: __init__.py  arxiv.py  normalize.py
paper_agent/synthesis/: __init__.py  models.py  paper_reader.py  survey.py
paper_agent/text/: __init__.py  chunker.py  loader.py
paper_agent/vector/: __init__.py  bailian.py  contracts.py  embedding.py  memory_store.py  models.py  retriever.py
tests/: test_arxiv.py  test_chunker.py  test_chunker_sections.py  test_citation_checker.py  test_cli.py  test_config.py  test_eval_metrics.py  test_eval_retrieval_metrics.py  test_eval_runner.py  test_evidence_retriever.py  test_formal_report.py  test_io.py  test_normalize.py  test_packaging.py  test_pipeline_evidence_trace.py  test_pipeline_fulltext_integration.py  test_pipeline_hybrid_retrieval.py  test_pipeline_retrieval_failures.py  test_pipeline_terminal_states.py  test_pipeline_vertical_slice.py  test_retrieval_eval_runner.py  test_schemas.py  test_synthesis.py
tests/evidence/: hybrid_fakes.py  test_evidence_packs.py  test_hybrid_failures.py  test_hybrid_retrieval_integration.py  test_hybrid_retriever.py  test_lexical_candidates.py  test_retrieval_factory.py  test_retrieval_models.py  test_rrf_fusion.py  (+1 more)
(+52 files in other folders)
