[project]
name = "paper-agent"
version = "0.1.0"
description = "CLI-first paper research agent with citation-traceable reports"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "httpx>=0.27",
  "rich>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]
pdf = [
  "pymupdf>=1.24",
]
llm = [
  "openai>=1.0",
]

[project.scripts]
paper-agent = "paper_agent.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
