[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-agent"
version = "0.1.0"
description = "CLI-first paper research agent with citation-traceable reports"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "rich>=13",
  "pymupdf>=1.24,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "tomli>=2; python_version < '3.11'",
]
llm = [
  "openai>=1.0",
]

[project.scripts]
paper-agent = "paper_agent.cli:app"

[tool.setuptools.packages.find]
include = ["paper_agent", "paper_agent.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
